--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Memory Match</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!--<script src="http://learning-fuze.github.io/memory_match/v0.1/script.js"></script>-->
 
     <script>
